# A2_TP_Qt

TP0/: CMakeLists.txt  main.cpp
TP1/: CMakeLists.txt  Window.cpp  Window.h  main.cpp
TP2/: ButtonsPanel.cpp  ButtonsPanel.h  CMakeLists.txt  ConfigurationDialog.cpp  ConfigurationDialog.h  LabeledTextField.cpp  LabeledTextField.h  SQLClientWindow.cpp  SQLClientWindow.h  main.cpp
TP3/: CMakeLists.txt  exo1.cpp  exo1.h  exo2.cpp  exo2.h  main.cpp
